--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,7 +52,8 @@
     "react-to-print": "^2.15.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
